<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FFFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="78dp"
        android:layout_height="67dp"
        android:contentDescription="@drawable/surflab_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        app:srcCompat="@drawable/surflab_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/instruction1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPortNum"
        app:layout_constraintVertical_bias="0.244" />

    <EditText
        android:id="@+id/editTextTextIPAddress"
        android:layout_width="159dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:digits="01234567890."
        android:ems="10"
        android:hint="@string/server_ip"
        android:inputType="number|textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.007"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/editTextTextPortNum"
        android:layout_width="72dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/server_port"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextIPAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toEndOf="@+id/editTextTextIPAddress"
        app:layout_constraintTop_toTopOf="@+id/editTextTextIPAddress" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="359dp"
        android:layout_height="33dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextIPAddress"
        app:layout_constraintVertical_bias="0.013">

        <TextView
            android:id="@+id/textRotVec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/rotation_vec"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/rotation_vec_x"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/rotation_vec_y"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/rotation_vec_z"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/rotation_vec_w"
            android:textSize="14sp" />

    </TableRow>

    <TextView
        android:id="@+id/textViewStreamState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:maxLines="2"
        android:text="@string/stream_status_off"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/start_button"
        app:layout_constraintTop_toTopOf="@+id/start_button"
        app:layout_constraintVertical_bias="0.794" />

    <com.surflab.tipscontroller.TIPSTouchView
        android:id="@+id/touch_view"
        android:layout_width="394dp"
        android:layout_height="719dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#25979793"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:textOff="@string/instrument_2"
        android:textOn="@string/instrument_1"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextIPAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPortNum"
        app:layout_constraintTop_toTopOf="@+id/editTextTextIPAddress" />

    <Button
        android:id="@+id/calibrate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calibrate"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/touch_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.845"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.001" />

</androidx.constraintlayout.widget.ConstraintLayout>